--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,62 @@
-*
-{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 html,
-body
-{
-    height: 100vh;
-    font-family: 'Poppins';
+body {
+  height: 100vh;
+  font-family: 'Poppins';
+  color: white;
 }
 
-.webgl
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    outline: none;
+.webgl {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
+}
+
+.container {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+}
+
+.content {
+  display: flex;
+  gap: 10em;
+  width: 100%;
+  padding-top: 3em;
+  position: relative;
+}
+
+.content:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border-bottom: 1px solid white;
+  transform: scaleX(1);
+}
+
+h1 {
+  font-size: 4rem;
+  width: 50vw;
+  list-style: 97%;
+  text-align: left;
+}
+
+p {
+  text-align: right;
+}
+
+h1,
+p {
+  flex-basis: 0;
+  flex-grow: 1;
 }
